--- a/0x00-Webpack/task_1/package.json
+++ b/0x00-Webpack/task_1/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "build": "webpack --mode production /js/dashboard_main.js "
+    "build": "webpack --mode production "
   },
   "keywords": [],
   "author": "",
